<?xml version="1.0"?>
<package>
  <name>costar_objects</name>
  <version>0.0.0</version>
  <description>The costar_objects package for generating random scene of costar objects</description>

  <maintainer email="fjonath1@jhu.edu">fjonath1</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>python_pcd</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>python_pcd</run_depend>
  <run_depend>depthimage_to_laserscan</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>